# study_rust

./: .env  Cargo.toml  README.md
design_patterns/: Cargo.toml
design_patterns/src/: builder_pattern.rs  main.rs
design_patterns/src/a_creation_mode/: builder.rs  factory.rs  mod.rs  singleton.rs
design_patterns/src/b_structural_mode/: adapter.rs  decorator.rs  mod.rs  proxy.rs
design_patterns/src/c_behavioral_pattern/: chain_of_responsibility.rs  mod.rs  observer.rs  strategy.rs  template.rs
src/: a_map_test.rs  a_option_test.rs  a_struct_test.rs  lib.rs  main.rs
src/study/: a_enum_test.rs  a_error_test.rs  a_generic_test.rs  a_io_test.rs  a_map_test.rs  a_option_test.rs  a_struct_test.rs  a_thread_test.rs  a_trait_test.rs  a_vec_test.rs  mod.rs  test_enum.rs  test_error.rs  test_generic.rs  test_map.rs  test_struct.rs  test_trait.rs  test_vec.rs
src/study_other/: a_calamine_test.rs  a_clap_test.rs  a_reqwest_test.rs  a_serde_test.rs  mod.rs  test_anyhow.rs  test_calamine.rs  test_clap.rs  test_env_logger.rs  test_reqwest.rs  test_sqlx.rs  test_thiserror.rs
study/src/: main.rs  test_enum.rs  test_error.rs  test_generic.rs  test_io.rs  test_option.rs  test_struct.rs  test_time.rs  test_trait.rs  test_vec.rs
study_async/: Cargo.toml
study_async/src/: main.rs  test_reqwest.rs  test_sqlx.rs  test_tokio.rs
study_inner/: Cargo.toml
study_inner/src/: main.rs  test_iter.rs  test_map.rs  test_option.rs  test_path.rs  test_thread.rs  test_time.rs  test_trait.rs
study_other/: Cargo.toml
study_other/src/: main.rs  test_anyhow.rs  test_calamine.rs  test_chrono.rs  test_clap.rs  test_dotenv.rs  test_env_logger.rs  test_indicatif.rs  test_once_cell.rs  test_rayon.rs  test_reqwest.rs  test_serde.rs  test_sqlx.rs  test_thiserror.rs
study_tokio/: Cargo.toml
