[package]
name = "study_async"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] } # http请求  blocking:同步请求
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql"] }
once_cell = "1.19.0"