[package]
name = "study_other"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] } # http请求  blocking:同步请求
tokio = { version = "1", features = ["full"] }                  # 可以支持异步运行
serde = { version = "1.0", features = ["derive"] }              # json序列化与反序列化
serde_json = "1.0"                                              # 序列化具体第三方的实现
log = "0.4.0"                                                   # 日志门面
env_logger = "0.9"                                              # 具体的日志库
calamine = "0.24"                                               # 读取excel
anyhow = "1.0.82"
thiserror = "1.0.58"
clap = { version = "4.5.4", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql"] }
once_cell = "1.19.0"
chrono = "0.4.38"