[package]
name = "study_other"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }              # json序列化与反序列化
serde_json = "1.0"                                              # 序列化具体第三方的实现
log = "0.4.0"                                                   # 日志门面
env_logger = "0.9"                                              # 具体的日志库
calamine = "0.24"                                               # 读取excel
anyhow = "1.0.82"
thiserror = "1.0.58"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"